@@ -9,8 +9,8 @@ android {
     applicationId 'net.sourceforge.smallbasic'
     minSdkVersion 21
     targetSdkVersion 34
-    versionCode 74
-    versionName '12.28'
+    versionCode 76
+    versionName '12.29'
     resourceConfigurations += ['en']
   }
 
