@@ -5,7 +5,7 @@ buildscript {
     mavenCentral()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:8.9.1'
+    classpath 'com.android.tools.build:gradle:8.9.2'
   }
 }
 
